problema de padding corrigido

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -21,7 +21,6 @@
         --font-padrao: Arial, Verdana, Helvetica, sans-serif;
         --font-destaque: 'Bebas Neue', sans-serif;
         --font-android: 'android', sans-serif;
-        
 }
 
 * {
@@ -40,9 +39,6 @@ header {
     background-image: linear-gradient(to bottom, var(--cor3), var(--cor5));
     min-height: 150px;
     padding-top: 30px;
-  
-
-    
 }
 
 
@@ -54,20 +50,19 @@ header > h1 {
     font-size: 3em;
     margin-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.521);
-    
 }
 
 header > p {
     color: white;
     font-family: var(--font-padrao);
+    text-align: center;
     font-size: 1.2em;
     max-width: 600px;
     padding-left: 10px;
     padding-right: 10px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 20px;
     text-shadow: 2px 2px 0px rgba(0, 0, 0, 0.479);
-    
 }
 
 nav {
@@ -146,7 +141,6 @@ main a {
     color: var(--cor5);
     background-color: var(--cor1);
     padding: 2px 6px;
-
 }
 
 main a:hover {
